--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@apollo/server": "^4.9.1",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
