--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "@apollo/server": "^4.9.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "graphql": "^16.7.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2"
   },
   "devDependencies": {
